style: fix font size on smaller screens

--- a/styles/style.css
+++ b/styles/style.css
@@ -107,7 +107,7 @@ main {
 	flex-direction: column;
 	align-items: center;
 	font-family: Inconsolata, monospace;
-	padding: 25px;
+	padding: 0 25px;
 	/* flex-basis: 600px; */
 }
 
@@ -172,7 +172,7 @@ main {
 }
 
 #arrows-down {
-	margin-top: 55px;
+	margin-top: 50px;
 	width: 75px;
 	height: 65px;
 	animation: bounce 1s infinite alternate; 
@@ -192,7 +192,25 @@ polygon {
 	 
 }
 
-@media screen and (min-height: 768px) {
+@media screen and (max-width: 320px) {
+	.intro {
+		padding: 0 10px;
+	}
+
+	.intro h1 {
+		font-size: 50px;
+	}
+
+	.intro h2 {
+		font-size: 32px;
+	}
+
+	.underline {
+		max-width: 130px;
+	}
+}
+
+@media screen and (min-height: 741px) {
 	.intro p {
 		margin: 88px 0;
 	}
@@ -220,7 +238,7 @@ polygon {
 	}
 }
 
-@media screen and (min-height: 900px) {
+@media screen and (min-height: 850px) {
 	#arrows-down {
 		/* border: 1px solid yellow; */
 		margin-top: 170px;
